@startuml
'https://plantuml.com/class-diagram

interface TopicListener {
    +void listen(TinTuc t);
    +void updateTopic(int i, String s);
}

class Topic {
    -List<TinTuc> list;
    + void dangKy(TopicListener topic)
    + void huyDangKy(TopicListener topic)
    + void themMoi(TinTuc t)
    + void capNhat(TinTuc t)
}

class ThanhVienA {}
class ThanhVienB {
    List<TinTuc> list;
}


TopicListener <|.. ThanhVienA
TopicListener <|.. ThanhVienB
Topic o--> TopicListener:observers
Topic <--- ThanhVienA
Topic <--- ThanhVienB

note right of Topic
    Subject
end note

@enduml